--- a/conf/bblayers.conf
+++ b/conf/bblayers.conf
@@ -9,8 +9,17 @@ BBLAYERS ?= " \
   /home/builder/poky/meta \
   /home/builder/poky/meta-yocto \
   /home/builder/poky/meta-yocto-bsp \
+  /home/builder/git/openembedded-core/meta \
+  /home/builder/git/meta-qt5 \
+  /home/builder/git/meta-openembedded/meta-networking \
+  /home/builder/git/meta-openembedded/meta-python \
+  /home/builder/git/meta-openembedded/meta-oe \
   "
 BBLAYERS_NON_REMOVABLE ?= " \
   /home/builder/poky/meta \
   /home/builder/poky/meta-yocto \
   "
+#added by hob
+BBFILES += "${TOPDIR}/recipes/images/custom/*.bb"
+#added by hob
+BBFILES += "${TOPDIR}/recipes/images/*.bb"
