--- a/conf/local.conf
+++ b/conf/local.conf
@@ -22,7 +22,7 @@
 #MACHINE ?= "qemumips"
 #MACHINE ?= "qemuppc"
 #MACHINE ?= "qemux86"
-#MACHINE ?= "qemux86-64"
+MACHINE ?= "qemux86-64"
 #
 # There are also the following hardware board target machines included for 
 # demonstration purposes:
@@ -104,7 +104,7 @@ DISTRO ?= "poky"
 #  - 'package_rpm' for rpm style packages
 # E.g.: PACKAGE_CLASSES ?= "package_rpm package_deb package_ipk"
 # We default to rpm:
-PACKAGE_CLASSES ?= "package_rpm"
+PACKAGE_CLASSES ?= "package_deb"
 
 #
 # SDK/ADT target architecture
@@ -137,7 +137,7 @@ PACKAGE_CLASSES ?= "package_rpm"
 # There are other application targets that can be used here too, see
 # meta/classes/image.bbclass and meta/classes/core-image.bbclass for more details.
 # We default to enabling the debugging tweaks.
-EXTRA_IMAGE_FEATURES = "debug-tweaks"
+EXTRA_IMAGE_FEATURES = "debug-tweaks package-management tools-sdk"
 
 #
 # Additional image features
