--- a/conf/local.conf
+++ b/conf/local.conf
@@ -11,6 +11,29 @@
 # the option is a question of removing the # character and making any change to the
 # variable as required.
 
+#Additions for Qt5
+IMAGE_INSTALL_append = " gcc g++ binutils libgcc libgcc-dev libstdc++ libstdc++-dev libstdc++-staticdev \
+autoconf automake ccache chkconfig glib-networking glibmm \
+packagegroup-core-buildessential pkgconfig  \
+boost cmake zlib glib-2.0 \
+    ruby \
+    cpufrequtils \
+    nano \
+    gdb \
+    qtbase-fonts \
+    qtbase-plugins \
+    qtbase-tools \
+    qtdeclarative \
+    qtdeclarative-plugins \
+    qtdeclarative-tools \
+    qtdeclarative-qmlplugins \
+    qtmultimedia \
+    qtmultimedia-plugins \
+    qtmultimedia-qmlplugins \
+    cairo pango fontconfig freetype pulseaudio dbus \
+    i2c-tools "
+
+
 #
 # Machine Selection
 #
