--- a/conf/local.conf
+++ b/conf/local.conf
@@ -15,7 +15,7 @@
 IMAGE_INSTALL_append = " gcc g++ binutils libgcc libgcc-dev libstdc++ libstdc++-dev libstdc++-staticdev \
 autoconf automake ccache chkconfig glib-networking glibmm \
 packagegroup-core-buildessential pkgconfig  \
-boost cmake zlib glib-2.0 \
+boost cmake zlib glib-2.0 net-snmp \
     ruby \
     cpufrequtils \
     nano \
@@ -30,6 +30,7 @@ boost cmake zlib glib-2.0 \
     qtmultimedia \
     qtmultimedia-plugins \
     qtmultimedia-qmlplugins \
+    qtserialport \
     cairo pango fontconfig freetype pulseaudio dbus \
     i2c-tools "
 
